# simple-mapreduce

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  baseline.cc  run_docker
.circleci/: config.yml
app/: CMakeLists.txt  sourcelist.cmake  word_count.cc
app/movielens/: README.md  main.cc
app/rainfall/: README.md  main.cc
app/wordcount/: README.md  main.cc
app/wordcount_with_combiner/: README.md  main.cc
cmake/: sourcelist.cmake  utils.cmake
example/: sourcelist.cmake  word_count.cc
include/: commons.h  mapreduce.h  simplemapreduce.h
include/data/: queue.h
include/mr/: mapper.h  mapper.tcc  reducer.h  reducer.tcc
include/ops/: conf.h  context.h  fileformat.h  job.h  job.tcc
include/proc/: shuffle.h  sorter.h  sorter.tcc  writer.h  writer.tcc
include/simplemapreduce/: commons.h  config.h  mapper-inl.h  mapper.h  mapper.tcc  reducer-inl.h  reducer.h  reducer.tcc
include/simplemapreduce/base/: fileformat.h  job_manager.h  job_runner.h  job_tasks.h
include/simplemapreduce/data/: bytes-inl.h  bytes.h  bytes.tcc  queue.h  queue.tcc  type.h
include/simplemapreduce/local/: fileformat.h  manager.h  runner.h
include/simplemapreduce/ops/: conf.h  context-inl.h  context.h  context.tcc  fileformat.h  func.h  job-inl.h  job.h  job.tcc  job_runner.h  job_tasks.h
include/simplemapreduce/proc/: loader-inl.h  loader.h  loader.tcc  shuffle-inl.h  shuffle.h  shuffle.tcc  sorter-inl.h  sorter.h  sorter.tcc  writer-inl.h  writer.h  writer.tcc
include/simplemapreduce/util/: argparse.h  log-inl.h  log.h  log.tcc  parser.h  type_check.h  validator.h
include/util/: log.h
src/: argparse.cc  bytes.cc  commons.cc  context.cc  fileformat.cc  job.cc  job_runner.cc  loader.cc  local_fileformat.cc  local_manager.cc  local_runner.cc  log.cc  parser.cc  queue.cc  sorter.cc  validator.cc  writer.cc
tests/: CMakeLists.txt  test_argparse.cc  test_bytes.cc  test_context.cc  test_fileformat.cc  test_func.cc  test_integration.cc  test_loader.cc  test_local_fileformat.cc  test_log.cc  test_parser.cc  test_queue.cc  test_shuffle.cc  test_sorter.cc  test_writer.cc  utils.cc  utils.h
